--- a/style.css
+++ b/style.css
@@ -45,6 +45,33 @@ nav a {
 }
 
 nav a:hover {
-	color: #8400ff;
+	color: #000000;
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+footer {
+	text-align: center;
+	background: url("bg.jpg");
+	padding: 40px 0;
+}
+
+.copyright {
+	color: #ffffff;
+	font-size: 15px;
+	margin: 20px 0 0;
+}
